--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "prettier": "^3.3.3",
     "tsup": "^8.2.4",
     "typescript": "^5.5.4",
-    "vite": "^5.4.2",
+    "vite": "^5.4.2"
   },
   "scripts": {
     "dev": "vite",
